--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
     "name": "@reach-digital/magento2-inventory-source-reservations",
-    "repository": "git@github.com:ho-nl/magento2-ReachDigital_InventorySourceReservations.git",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:ho-nl/magento2-ReachDigital_InventorySourceReservations.git"
+    },
     "author": "Paul Hachmang <paul@reachdigital.nl>",
     "private": true,
+    "publishConfig": {
+        "access": "restricted"
+    },
     "devDependencies": {
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
